Fixing layout shift CSS

--- a/assets/scss/projects.scss
+++ b/assets/scss/projects.scss
@@ -4,12 +4,6 @@
 
 .project {
 
-	// Project > Collection
-	&s {
-		padding-top: 2rem;
-		padding-bottom: 2rem;
-	}
-
 	// Project > Link
 	&__link {
 		position: relative;
